--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,14 @@
     width: 80px;
     height: 80px;
     margin-right: 7px;
+    margin-left: 5px;
+}
+
+.movie-poster-dialogbox{
+    width: 80px;
+    height: 100px;
+    margin-right: 7px;
+    margin-left: 9px;
 }
 
 @keyframes App-logo-spin {
